--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="https://npmcdn.com/leaflet@1.0.0-rc.2/dist/leaflet.css" />
     <title>React App</title>
   </head>
-  <body style="background-color: #161616; margin: 0px;">
+  <body style="background-color: #161616; margin: 0px; position: absolute; height: 100% !important; width: 100% !important;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
